// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RoomDetectionService - updateRoomsAfterWallRemoval > boundary wall removal patterns > should handle L-shaped room merging 1`] = `
{
  "floorId": "floor1",
  "holes": [],
  "id": "room5",
  "interiorWallIds": Set {
    "r1-top",
  },
  "name": "Rectangle Room",
  "outerBoundary": {
    "pointIds": [
      "point-0-0",
      "point-1-0",
      "point-2-0",
      "point-2-1",
      "point-2-2",
      "point-0-2",
      "point-0-1",
    ],
    "wallIds": Set {
      "r1-bottom",
      "r1-left",
      "r2-bottom",
      "r2-right-1",
      "r2-right-2",
      "r2-top",
      "r2-left",
    },
  },
}
`;

exports[`RoomDetectionService - updateRoomsAfterWallRemoval > boundary wall removal patterns > should merge simple adjacent rooms when removing shared wall 1`] = `
{
  "floorId": "floor1",
  "holes": [],
  "id": "room5",
  "interiorWallIds": Set {},
  "name": "Left Room",
  "outerBoundary": {
    "pointIds": [
      "point-0-1",
      "point-0-0",
      "point-1-0",
      "point-2-0",
      "point-2-1",
      "point-1-1",
    ],
    "wallIds": Set {
      "left-bottom",
      "left-top",
      "left-left",
      "right-bottom",
      "right-right",
      "right-top",
    },
  },
}
`;

exports[`RoomDetectionService - updateRoomsAfterWallRemoval > boundary wall removal patterns > should preserve room holes during merging 1`] = `
{
  "floorId": "floor1",
  "holes": [
    {
      "pointIds": [
        "point-0-2",
        "point-0-3",
        "point-1-3",
      ],
      "wallIds": Set {
        "hole-left",
      },
    },
    {
      "pointIds": [
        "point-2-2",
        "point-2-3",
        "point-3-3",
      ],
      "wallIds": Set {
        "hole-right",
      },
    },
  ],
  "id": "room5",
  "interiorWallIds": Set {},
  "name": "Left Room with Hole",
  "outerBoundary": {
    "pointIds": [
      "point-0-1",
      "point-0-0",
      "point-1-0",
      "point-2-0",
      "point-2-1",
      "point-1-1",
    ],
    "wallIds": Set {
      "left-bottom",
      "left-top",
      "left-left",
      "right-bottom",
      "right-right",
      "right-top",
    },
  },
}
`;

exports[`RoomDetectionService - updateRoomsAfterWallRemoval > wall relationship patterns > should handle multiple rooms sharing wall segments in complex layouts 1`] = `
{
  "floorId": "floor1",
  "holes": [],
  "id": "room5",
  "interiorWallIds": Set {},
  "name": "Room 1",
  "outerBoundary": {
    "pointIds": [
      "point-0-1",
      "point-0-0",
      "point-1-0",
      "point-2-0",
      "point-2-1",
      "point-1-1",
    ],
    "wallIds": Set {
      "r1-top",
      "shared-1-3",
      "r1-left",
      "r2-top",
      "r2-right",
      "shared-2-3",
    },
  },
}
`;

exports[`RoomDetectionService - updateRoomsAfterWallRemoval > when merging two different rooms > should handle rooms with holes during merging 1`] = `
{
  "floorId": "floor1",
  "holes": [
    {
      "pointIds": [
        "point-0-2",
        "point-0-3",
        "point-1-3",
      ],
      "wallIds": Set {
        "hole1",
      },
    },
    {
      "pointIds": [
        "point-1-2",
        "point-1-3",
        "point-2-3",
      ],
      "wallIds": Set {
        "hole2",
      },
    },
  ],
  "id": "room5",
  "interiorWallIds": Set {},
  "name": "Left Room",
  "outerBoundary": {
    "pointIds": [
      "point-0-1",
      "point-0-0",
      "point-1-0",
      "point-2-0",
      "point-2-1",
      "point-1-1",
    ],
    "wallIds": Set {},
  },
}
`;
